--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode=development",
-    "build": "webpack --mode=production"
+    "deprecated-start": "webpack --mode=development",
+    "build": "webpack --mode=production",
+    "start": "webpack serve --mode=development"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "react": "^18.3.0",
